# NCCL-cuBLAS-Multi-GPU

./: README.md
MatrixCholesky/: CMakeLists.txt  run_slurm.sh
MatrixCholesky/include/: gpu_utils.hpp  linalg_utils.hpp  nccl_utils.hpp  owner_utils.hpp  task_scheduler.hpp  validation.hpp
MatrixCholesky/src/: gpu_utils.cpp  linalg_utils.cu  main_c_mpi.cu  nccl_utils.cpp  owner_utils.cpp  task_scheduler.cpp  validation.cpp
MatrixMultiplication/: CMakeLists.txt  run_slurm.sh
MatrixMultiplication/include/: cublas_matmul.hpp  gpu_utils.hpp  nccl_utils.hpp  scheduler.hpp
MatrixMultiplication/src/: cublas_matmul.cu  gpu_utils.cpp  main_a.cu  main_c_mpi.cu  nccl_utils.cpp  scheduler.cpp
docs/: InformationLevel1.md
